[gd_scene load_steps=4 format=3 uid="uid://cbx4uhnqjl7v2"]

[ext_resource type="Script" path="res://SettingsScreen.gd" id="1_script"]

[sub_resource type="Gradient" id="Gradient_bg"]
colors = PackedColorArray(0.1, 0.1, 0.2, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_bg"]
gradient = SubResource("Gradient_bg")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_bg")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "USTAWIENIA"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20

[node name="LabelAddr" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Adres Serwera:"

[node name="AddressEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ws://188.68.247.138:8910"

[node name="LabelFullscreen" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Pełny ekran:"

[node name="FullscreenCheck" type="CheckButton" parent="CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
text = "WRÓĆ"
